--- a/css/styles.css
+++ b/css/styles.css
@@ -207,7 +207,7 @@ h3 {
   text-transform: uppercase;
   color: var(--white-text-color);
   background: #2F303ACC;
-  width: 370px;
+  width: 100%;
   height: 70px;
 }
 
@@ -401,11 +401,12 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   overflow: hidden;
   width: 100%;
   height: 0;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: height 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
-.portfolio-link:hover .overlay{
+.portfolio-link:hover .overlay,
+.portfolio-link:focus .overlay{
   height: 100%;
 }
 
@@ -519,7 +520,7 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   width: 44px;
   height: 44px;
   border-radius: 50%;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), backgroung-color 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
 }
 
 .social-icon {
@@ -663,6 +664,6 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 .icon-close {
   fill: #000;
 
-  width: 11px;
-  height: 11px;
+  width: 15px;
+  height: 15px;
 }
